--- a/results/SamplingMethods.Rmd
+++ b/results/SamplingMethods.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "SamplingMethods"
 author: "Halil Bilgin"
-date: "3 Nisan 2017"
+date: "10 Nisan 2017"
 output:
   word_document: 
     fig_height: 4
@@ -19,127 +19,107 @@ library(plyr, quietly = T)
 library(scales, quietly = T)
 
 source('../autoload.R', chdir=T)
-algorithms <- c('lda', 'svmRadial', 'glm', 'rf', 'nb')
+algorithms <- c('lda')
 
 algorithms <- loadClassifiers(algorithms)
+
+repetitions <- 50
+
 cat('Constant Seed:', seed, '\n')
 library(doMC)
-registerDoMC(cores = 2)
+registerDoMC(cores = 4)
 
-samplingMethods <- c( 'up', 'smote', 'rose', 'down', 'none')
-
-set.seed(seed)
-features <- featureSelection$aic(c(featureSelection$fm(db,F)), scaledDb)
+samplingMethods <- c('smote', 'none', 'up', 'down')
 
 set.seed(seed)
-tt <- manipulations$trainTest(db, p=0.7)
-scaledTt <- manipulations$scaledTrainTest(tt$train, tt$test)
-print(tt$test)
-allModels <- list()
-allCmatrices <- list()
+formulas <- c(
+  featureSelection$aic(c(featureSelection$fm(db,T), featureSelection$fm(db,F)), scaledDb)
+  )
+names(formulas) <- 1:length(formulas)
+
+print(lapply(formulas, function(fm) {
+  paste(format(fm), collapse='')
+}))
+set.seed(seed)
+
+result <- data.frame(
+  method=character(),
+  Accuracy=numeric(),
+  AccuracyNull=numeric(),
+  Sensitivity=numeric(),
+  Specificity=numeric(),
+  Kappa=numeric()
+)
+
 ```
 
-## Modeling the original unbalanced data
+## Features Comparison
 
-In this report, undersampling, oversampling and rose methods will be used.
-
-Setup:
-0.7 - 0.3 scaled training-test split.
-For Training control, method is 10-fold repeatedCV repeated by 10 times. 
-
-Below, there are graphics for each learning algorithms that compares the performance of each sampling method using the learning algorithm.
+```r repetitions``` Different training-test split was used to measure performance of each formula-sampling method combination. Table below represents confidence intervals of the different scores.
 
 ```{r trainingModels, echo=FALSE, include=FALSE}
-
-  set.seed(seed)
-  seeds <- vector(mode = "list", length = 101)
-  for(i in 1:101){
-    set.seed(seed+i)
-    seeds[[i]] <- sample.int(1000, 22)
-  }
+sapply(names(formulas), function(fmNo) {
+  fm <- formulas[fmNo]
   for(i in 1:length(algorithms)) {
-    cmatrices <- list()
-    models <- lapply(samplingMethods, function(nm) {
+    lapply(samplingMethods, function(nm) {
       
-     
-      control <- trainControl(method="repeatedcv", number = 10, repeats=3, 
-                    allowParallel = T,sampling=if(nm=='none') NULL else nm,
-                    seeds = seeds)
-     
-      model <- algorithms[[i]](scaledTt$train, features[[1]], trControl=control,
-                              method=names(algorithms)[i])
-      cmatrix <- confusionMatrix(predict(model, newdata=scaledTt$test),
-                                 scaledTt$test$gfrloss2)
-      cmatrices <- assign('cmatrices', append(get('cmatrices'), 
-                                              list(cmatrix)), env=.GlobalEnv)
-      
-      return(model)
+      sapply(names(algorithms), function(algorithm) {
+        classifier <- get('algorithms')[[algorithm]]
+        for(i in 1:repetitions) {
+          set.seed(seed+i*100+1000)
+          tt <- manipulations$trainTest(get('db'), p=0.75)
+          scaledTt <- manipulations$scaledTrainTest(tt$train, tt$test)
+          
+          control <- trainControl(method="none", allowParallel = T, sampling=if(nm=='none') NULL else nm)
+          
+          fit <- classifier(scaledTt$train, get('fm')[[1]], method=algorithm,
+                            trControl=control)
+          confMatrix <- confusionMatrix(predict(fit, newdata=scaledTt$test),
+                                        scaledTt$test$gfrloss2)
+          
+          assign("result", rbind(get('result'), data.frame(
+            method=paste(algorithm, nm, 'formula', get('fmNo')),
+            Accuracy=confMatrix$overall['Accuracy'],
+            AccuracyNull=confMatrix$overall['AccuracyNull'],
+            Sensitivity=confMatrix$byClass['Sensitivity'],
+            Specificity=confMatrix$byClass['Specificity'],
+            Kappa=confMatrix$overall['Kappa']
+          )), envir = .GlobalEnv)
+          
+        }
+    })
     })
     
-    names(models) <- samplingMethods
-    names(cmatrices) <- names(models)
-    
-    allModels <- append(allModels, list(models))
-    allCmatrices <- append(allCmatrices, list(cmatrices))
-    
   }
+})
 
-  names(allModels) <- names(algorithms)
-  names(allCmatrices) <- names(algorithms)
   
 ```
 
-```{r graphs, echo=FALSE}
-  allKappaVals <- data.frame(samplingMethod=character(),
-                             learningMethod=character(),
-                             kappa=numeric())
-  for(i in 1:length(allModels)) {
-    algorithm <- names(allModels)[i]
-    print(algorithm)
-    
-    models <- allModels[[i]]
-    cmatrices <- allCmatrices[[i]]
-    
-    comparison <- data.frame()
-
-    for (name in names(models)) {
-      model <- cmatrices[[name]]
-      
-      comparison <- rbind(comparison, data.frame(
-        samplingMethod=name,
-        learningMethod=algorithm,
-        Accuracy=model$overall['Accuracy'],
-        AccuracyNull=confMatrix$overall['AccuracyNull'],
-        Sensitivity=model$byClass['Sensitivity'],
-        Specificity=model$byClass['Specificity'],
-        Kappa=model$overall['Kappa']
-        
-      ))
-      
-    }
-    allKappaVals <- rbind(allKappaVals, comparison)
-    
-    print(comparison %>%
-      gather(x, y, Sensitivity:Kappa) %>%
-      ggplot(aes(x = x, y = y, color = samplingMethod)) +
-        geom_jitter(width = 0.2, alpha = 0.5, size = 3))
-  }
-
-```
-
-## Heatmap, comparing kappa values of each model and sampling method.
-Below, there is a heatmap that tries to summarize graphs above. Colors represents the kappa score of a specific learning-sampling method combination.
 
 ```{r kappavals, echo=FALSE}
+result2 <- result[0, ]
+
+c<-sapply(levels(result$method), function(method) {
+  result <- get('result')
+  x<- lapply(result[result$method == method,], function(x){
+    if(! is.numeric(x)) {
+      return(x[[1]])
+    }
+    tTest <- t.test(x)
+    sMean <- round(tTest$estimate[[1]],3)
+    sError <- round(tTest$estimate[[1]] - tTest$conf.int[1], 3)
+    
+    c(as.character(paste(sMean, '\u00B1', sError)))
+    
+  })
   
-  kappa.m <- allKappaVals
- ggplot(kappa.m, aes(samplingMethod, learningMethod)) +
-    geom_tile(aes(fill = Kappa)) + 
-    geom_text(aes(label = round(Kappa, 2))) +
-    scale_fill_gradient(low = "white", high = "steelblue") 
-  
-  
-  pandoc.header("Best kappa method", level=2)
-  print(knitr::kable(allKappaVals, row.names = F))
+  levels(x$method) <- levels(result$method)
+  x <- data.frame(x, stringsAsFactors=FALSE)
+  assign('result2', rbind(get('result2'), x), envir = .GlobalEnv)
+
+})
+
+knitr::kable(result2, row.names = F)
   
 ```
